# brandelier

./: .gitignore  Cargo.toml  README.md  app.py  brandelier.example.toml  brandelier.five.toml  brandelier_nano.ino  chandelier.py  crc.py  i2c.py  pyproject.toml  rustfmt.toml
.cargo/: config.toml
brandelier_nano/: brandelier_nano.ino
src/: bulb.rs  config.rs  driver.rs  i2c.rs  main.rs  topology.rs  wave.rs
static/: index.html  styles.css
templates/: index.html
ui/: .prettierignore  .prettierrc.json  app.jsx  camera-widget.jsx  eslint.config.js  index.html  main.jsx  package.json  panels.jsx  styles.css  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
ui/src/: App.jsx  App.tsx  main.tsx  styles.css  topology.ts  types.ts
ui/src/components/: CameraWidget.tsx  Chandelier.jsx  Chandelier.tsx  CollapsibleSection.tsx  GroupsPanel.jsx  GroupsPanel.tsx  Inspector.jsx  Inspector.tsx  PresetsPanel.tsx  WavePanel.jsx  WavePanel.tsx
ui/src/hooks/: useOrbitDrag.ts
