[package]
name = "brandelier"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
crc = "3.4.0"
kameo = "0.19.2"
thiserror = "2.0.18"
retry = "2.2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ordered-float = "5.1.0"
axum = "0.8.8"
tokio-util = "0.7.18"

[target.'cfg(target_os = "linux")'.dependencies]
i2cdev = "0.6.2"
