[project]
name = "chandelier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crccheck>=1.3.1",
    "pigpio>=1.78",
    "rich>=14.3.2",
    "smbus2>=0.6.0",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "ruff>=0.15.2",
]

[tools.basedpyright]
typeCheckingMode = "strict"
